feat: add user model
