# backend/src/routes/vehicle-owner.route.js
@@ -1,3 +1,6 @@
+/**
+ * Vehicle Owner routes
+ */
 const router = require('express').Router();
 const { registerDefinition } = require('swaggiffy');
 const controllers = require('../controllers/vehicle-owner.controller');
@@ -5,6 +8,10 @@ const controllers = require('../controllers/vehicle-owner.controller');
 router.get('/',  controllers.getAll);
 
 router.get('/:id',  controllers.getById);
+
+router.get('/owner/:ownerId',  controllers.getByOwnerId);
+
+router.get('/vehicle/:vehicleId',  controllers.getByVehicleId);
 
 router.post('/' , controllers.create);
 
